--- a/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
+++ b/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
@@ -40,7 +40,7 @@ library
     , containers
     , ghc
     , ghc-exactprint        < 1
-    , ghcide                ^>=1.8 || ^>= 1.9
+    , ghcide                ^>=1.8 || ^>= 1.9 || ^>= 1.10
     , hls-plugin-api        ^>=1.5 || ^>= 1.6
     , hls-refactor-plugin
     , lsp-types
