--- a/plugins/hls-cabal-fmt-plugin/hls-cabal-fmt-plugin.cabal
+++ b/plugins/hls-cabal-fmt-plugin/hls-cabal-fmt-plugin.cabal
@@ -33,7 +33,7 @@ library
     , base            >=4.12 && <5
     , directory
     , filepath
-    , ghcide          ^>= 1.9
+    , ghcide          ^>= 1.9 || ^>= 1.10
     , hls-plugin-api  ^>= 1.6
     , lens
     , lsp-types
