--- a/plugins/hls-class-plugin/hls-class-plugin.cabal
+++ b/plugins/hls-class-plugin/hls-class-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-class-plugin
-version:            1.1.1.0
+version:            1.1.1.1
 synopsis:
   Class/instance management plugin for Haskell Language Server
 
@@ -39,7 +39,7 @@ library
     , deepseq
     , extra
     , ghc
-    , ghcide          ^>=1.9
+    , ghcide          ^>=1.9 || ^>= 1.10
     , ghc-boot-th
     , hls-graph
     , hls-plugin-api  ^>=1.6
