--- a/plugins/hls-explicit-imports-plugin/hls-explicit-imports-plugin.cabal
+++ b/plugins/hls-explicit-imports-plugin/hls-explicit-imports-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.2
 name:               hls-explicit-imports-plugin
-version:            1.2.0.0
+version:            1.2.1.0
 synopsis:           Explicit imports plugin for Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -29,7 +29,7 @@ library
     , containers
     , deepseq
     , ghc
-    , ghcide                ^>=1.9
+    , ghcide                ^>=1.9 || ^>= 1.10
     , hls-graph
     , hls-plugin-api        ^>=1.6
     , lsp
