--- a/plugins/hls-module-name-plugin/hls-module-name-plugin.cabal
+++ b/plugins/hls-module-name-plugin/hls-module-name-plugin.cabal
@@ -32,7 +32,7 @@ library
     , base                  >=4.12 && <5
     , directory
     , filepath
-    , ghcide                ^>=1.9
+    , ghcide                ^>=1.9 || ^>= 1.10
     , hls-plugin-api        ^>=1.6
     , lsp
     , text
