--- a/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
+++ b/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-ormolu-plugin
-version:            1.0.3.0
+version:            1.0.4.0
 synopsis:           Integration with the Ormolu code formatter
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -32,7 +32,7 @@ library
     , filepath
     , ghc
     , ghc-boot-th
-    , ghcide          ^>=1.6 || ^>=1.7 || ^>= 1.8 || ^>= 1.9
+    , ghcide          ^>=1.6 || ^>=1.7 || ^>= 1.8 || ^>= 1.9 || ^>= 1.10
     , hls-plugin-api  ^>=1.3 || ^>=1.4 || ^>= 1.5 || ^>= 1.6
     , lens
     , lsp
