--- a/plugins/hls-qualify-imported-names-plugin/hls-qualify-imported-names-plugin.cabal
+++ b/plugins/hls-qualify-imported-names-plugin/hls-qualify-imported-names-plugin.cabal
@@ -30,7 +30,7 @@ library
     , containers
     , deepseq
     , ghc
-    , ghcide                ^>=1.6 || ^>=1.7 || ^>= 1.8 || ^>= 1.9
+    , ghcide                ^>=1.6 || ^>=1.7 || ^>= 1.8 || ^>= 1.9 || ^>= 1.10
     , hls-graph
     , hls-plugin-api        ^>=1.3 || ^>=1.4 || ^>= 1.5 || ^>= 1.6
     , lsp
