--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -174,6 +174,11 @@ flag explicitFields
   default:     True
   manual:      True
 
+flag overloadedRecordDot
+  description: Enable overloadedRecordDot plugin
+  default:     True
+  manual:      True
+
 -- formatters
 
 flag floskell
@@ -326,10 +331,15 @@ common explicitFields
     build-depends: hls-explicit-record-fields-plugin ^>= 1.0
     cpp-options: -DexplicitFields
 
+common overloadedRecordDot
+  if flag(overloadedRecordDot) && (impl(ghc >= 9.2.0) || flag(ignore-plugins-ghc-bounds))
+    build-depends: hls-overloaded-record-dot-plugin ^>= 1.0
+    cpp-options: -Dhls_overloaded_record_dot
+
 -- formatters
 
 common floskell
-  if flag(floskell) && impl(ghc < 9.5) 
+  if flag(floskell) && impl(ghc < 9.5)
     build-depends: hls-floskell-plugin ^>= 1.0
     cpp-options: -Dhls_floskell
 
@@ -387,6 +397,7 @@ library
                   , ormolu
                   , stylishHaskell
                   , refactor
+                  , overloadedRecordDot
 
   exposed-modules:
     Ide.Arguments
