--- a/plugins/hls-overloaded-record-dot-plugin/hls-overloaded-record-dot-plugin.cabal
+++ b/plugins/hls-overloaded-record-dot-plugin/hls-overloaded-record-dot-plugin.cabal
@@ -23,12 +23,14 @@ common warnings
     ghc-options: -Wall
 
 library
+    if impl(ghc < 9.2)
+      buildable: False
+    else
+      buildable: True
     import:           warnings
     exposed-modules:  Ide.Plugin.OverloadedRecordDot
-    -- other-modules:
-    -- other-extensions:
     build-depends:
-      , base                  >=4.12 && <5
+      , base                  >=4.16 && <5
       , ghcide                ^>=1.10
       , hls-plugin-api        ^>=1.6
       , lsp
@@ -44,10 +46,12 @@ library
     default-language: Haskell2010
 
 test-suite tests
+    if impl(ghc < 9.2)
+      buildable: False
+    else
+      buildable: True
     import:           warnings
     default-language: Haskell2010
-    -- other-modules:
-    -- other-extensions:
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
     main-is:          Main.hs
