--- a/stack.yaml
+++ b/stack.yaml
@@ -36,6 +36,7 @@ packages:
 - ./plugins/hls-explicit-fixity-plugin
 - ./plugins/hls-refactor-plugin
 - ./plugins/hls-explicit-record-fields-plugin
+- ./plugins/hls-overloaded-record-dot-plugin
 
 extra-deps:
 # needed for tests of hls-cabal-fmt-plugin
