--- a/plugins/hls-overloaded-record-dot-plugin/hls-overloaded-record-dot-plugin.cabal
+++ b/plugins/hls-overloaded-record-dot-plugin/hls-overloaded-record-dot-plugin.cabal
@@ -42,7 +42,7 @@ library
       , unordered-containers
       , containers
     hs-source-dirs:   src
-    default-language: Haskell2010
+    default-language: GHC2021
 
 test-suite tests
     if impl(ghc < 9.2)
@@ -50,7 +50,7 @@ test-suite tests
     else
       buildable: True
     import:           warnings
-    default-language: Haskell2010
+    default-language: GHC2021
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
     main-is:          Main.hs
