--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -23,8 +23,7 @@ source-repository head
   location: git://github.com/haskell/haskell-language-server.git
 
 library
-  if impl(ghc >= 9.5)
-    buildable: False
+  buildable: True
   exposed-modules:
       Ide.Plugin.Fourmolu
     , Ide.Plugin.Fourmolu.Shim
@@ -33,7 +32,7 @@ library
   build-depends:
     , base            >=4.12 && <5
     , filepath
-    , fourmolu        ^>=0.3 || ^>=0.4 || ^>= 0.6 || ^>= 0.7 || ^>= 0.8 || ^>= 0.9 || ^>= 0.10 || ^>= 0.11
+    , fourmolu        ^>=0.3 || ^>=0.4 || ^>= 0.6 || ^>= 0.7 || ^>= 0.8 || ^>= 0.9 || ^>= 0.10 || ^>= 0.11 || ^>= 0.12
     , ghc
     , ghc-boot-th
     , ghcide          ^>= 1.9 || ^>= 1.10
@@ -49,8 +48,7 @@ library
   default-language: Haskell2010
 
 test-suite tests
-  if impl(ghc >= 9.5)
-    buildable: False
+  buildable: True
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
