Implements michaelpj code review suggestions

--- a/plugins/hls-overloaded-record-dot-plugin/hls-overloaded-record-dot-plugin.cabal
+++ b/plugins/hls-overloaded-record-dot-plugin/hls-overloaded-record-dot-plugin.cabal
@@ -41,6 +41,7 @@ library
       , ghc-boot-th
       , unordered-containers
       , containers
+      , deepseq
     hs-source-dirs:   src
     default-language: GHC2021
 
