--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -33,6 +33,7 @@
 /plugins/hls-tactics-plugin @isovector
 /plugins/hls-stan-plugin @uhbif19
 /plugins/hls-explicit-record-fields-plugin @ozkutuk
+/plugins/hls-overloaded-record-dot-plugin @joyfulmantis
 
 # Benchmarking
 /shake-bench @pepeiborra
