--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -247,6 +247,12 @@ jobs:
         name: Test hls-retrie-plugin test suite
         run: cabal test hls-retrie-plugin --test-options="$TEST_OPTS" || cabal test hls-retrie-plugin --test-options="$TEST_OPTS"
 
+      - if: matrix.test && matrix.ghc != '8.10.7' && matrix.ghc != '9.0.2'
+        name: Test hls-overloaded-record-dot-plugin test suite
+        run: cabal test hls-overloaded-record-dot-plugin --test-options="$TEST_OPTS" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test hls-overloaded-record-dot-plugin --test-options="$TEST_OPTS"
+
+
+
   test_post_job:
     if: always()
     runs-on: ubuntu-latest
