--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -78,6 +78,7 @@ library
         prettyprinter >= 1.7,
         random,
         regex-tdfa >= 1.3.1.0,
+        row-types,
         text-rope,
         safe-exceptions,
         hls-graph == 2.1.0.0,
