--- a/hls-plugin-api/hls-plugin-api.cabal
+++ b/hls-plugin-api/hls-plugin-api.cabal
@@ -38,6 +38,7 @@ library
     Ide.Plugin.ConfigUtils
     Ide.Plugin.Properties
     Ide.Plugin.RangeMap
+    Ide.TempLSPTypeFunctions
     Ide.PluginUtils
     Ide.Types
 
