--- a/ghcide/test/ghcide-test-utils.cabal
+++ b/ghcide/test/ghcide-test-utils.cabal
@@ -38,6 +38,7 @@ library
         lsp-test ^>= 0.15,
         tasty-hunit >= 0.10,
         text,
+        row-types,
     hs-source-dirs: src
     exposed-modules:
         Development.IDE.Test
