ghcide-bench compiles

--- a/ghcide-bench/ghcide-bench.cabal
+++ b/ghcide-bench/ghcide-bench.cabal
@@ -89,6 +89,7 @@ library
         safe-exceptions,
         shake,
         text,
+        row-types
     default-extensions:
         BangPatterns
         DeriveFunctor
