--- a/hls-test-utils/hls-test-utils.cabal
+++ b/hls-test-utils/hls-test-utils.cabal
@@ -56,7 +56,7 @@ library
     , temporary
     , text
     , unordered-containers
-
+    , row-types
   ghc-options:      -Wall
 
   if flag(pedantic)
