--- a/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
+++ b/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
@@ -36,7 +36,7 @@ library
     , text
     , transformers
     , unordered-containers
-
+    , containers
   ghc-options: -Wall
   default-language: Haskell2010
   default-extensions:
