code-range compiles

--- a/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
+++ b/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
@@ -72,3 +72,5 @@ test-suite tests
     , text
     , transformers
     , vector
+    -- Dump this once dumpNulls has gotten into lsp types
+    , hls-plugin-api
