--- a/plugins/hls-module-name-plugin/hls-module-name-plugin.cabal
+++ b/plugins/hls-module-name-plugin/hls-module-name-plugin.cabal
@@ -30,6 +30,7 @@ library
   build-depends:
     , aeson
     , base                  >=4.12 && <5
+    , containers
     , directory
     , filepath
     , ghcide                == 2.1.0.0
