functional tests compile
Now the whole project should compile on ghc 9.0 and 9.2 .
ghc versions 8.10 and 9.4 and up have not yet been tested

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -556,6 +556,7 @@ test-suite func-test
     , lsp-test
     , containers
     , unordered-containers
+    , row-types
 
   hs-source-dirs:     test/functional test/utils
 
