--- a/plugins/hls-rename-plugin/hls-rename-plugin.cabal
+++ b/plugins/hls-rename-plugin/hls-rename-plugin.cabal
@@ -35,6 +35,7 @@ library
     , hie-compat
     , hls-plugin-api        == 2.0.0.0
     , hls-refactor-plugin
+    , lens
     , lsp
     , lsp-types
     , mod
