Commit to prettyprinter >= 1.7
ghcide already depends on 1.7 which added the new module hierarchy
naming, so let's commit to that and use it throughout. Lets us delete
some CPP, which is always good.

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -40,7 +40,7 @@ common common-deps
     , extra
     , filepath
     , text
-    , prettyprinter
+    , prettyprinter >= 1.7
 
 -- Default warnings in HLS
 common warnings
