--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -90,7 +90,7 @@ jobs:
           echo "Excluded the following packages due the GHC version:"
           echo "$EXCLUDED"
 
-          PKGS_FOR_SH=$(echo "$SELECTED_PKGS" | jq -r '"pkg:" + . | @tsv' | tr '\t' ' ' )
+          PKGS_FOR_SH=$(echo "$SELECTED_PKGS" | jq -r '[.[] | "pkg:" + .] | @tsv' | tr '\t' ' ' )
           echo "PKGS=$PKGS_FOR_SH" >> "$GITHUB_ENV"
         shell: bash
 
