--- a/stack.yaml
+++ b/stack.yaml
@@ -55,6 +55,7 @@ extra-deps:
   - lsp-types
   - lsp-test
 - hie-bios-0.12.0
+- row-types-1.0.1.2
 
 # currently needed for ghcide>extra, etc.
 allow-newer: true
