ghcide-bench fix constraint

--- a/ghcide-bench/ghcide-bench.cabal
+++ b/ghcide-bench/ghcide-bench.cabal
@@ -23,7 +23,7 @@ executable ghcide-bench
     build-depends:
         aeson,
         base,
-        bytestring ^>= 0.11,
+        bytestring >= 0.11,
         containers,
         data-default,
         directory,
