--- a/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
+++ b/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
@@ -23,7 +23,7 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
-  if impl(ghc >= 9.5)
+  if impl(ghc >= 9.7)
     buildable: False
   exposed-modules:  Ide.Plugin.Ormolu
   hs-source-dirs:   src
@@ -36,13 +36,13 @@ library
     , hls-plugin-api  == 2.1.0.0
     , lens
     , lsp
-    , ormolu          ^>=0.1.2 || ^>= 0.2 || ^>= 0.3 || ^>= 0.5
+    , ormolu          ^>=0.1.2 || ^>= 0.2 || ^>= 0.3 || ^>= 0.5 || ^>= 0.6 || ^>= 0.7
     , text
 
   default-language: Haskell2010
 
 test-suite tests
-  if impl(ghc >= 9.5)
+  if impl(ghc >= 9.7)
     buildable: False
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
