--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -158,7 +158,7 @@ jobs:
 
   build-arm:
     name: Build ARM binary
-    runs-on: [self-hosted, Linux, ARM64, beefy]
+    runs-on: [self-hosted, Linux, ARM64]
     env:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
