Resolve 1: Support for resolve in overloaded-record-dot (#3658)
* resolve for overloaded-record-dot (checkpoint)

* resolve support works on VSCode (tests need to be redone)

* Tests for both resolve and non resolve variants

* Added more tests

* Fix merge mistakes; move function to hls-test-utils

* Remove codeLens resolve
Fix codeActionResolve combine responses

* Don't use partial functions

* Implement michaelpj's suggestions

* Make owned resolve data transparent to the plugins

* Improve ord's resolve handler's error handling

* Oh well, if only we had MonadFail

* Generic support for resolve in hls packages

* Add a new code action resolve helper that falls backs to commands

* add resolve capability set to hls-test-utils

* use caps defined at hls-test-utils

* Add code lens resolve support

* Improve comments

* remove Benchmark as it wasn't that useful and triggered a lsp-test bug

---------

Co-authored-by: Michael Peyton Jones <me@michaelpj.com>

--- a/plugins/hls-overloaded-record-dot-plugin/hls-overloaded-record-dot-plugin.cabal
+++ b/plugins/hls-overloaded-record-dot-plugin/hls-overloaded-record-dot-plugin.cabal
@@ -30,6 +30,7 @@ library
     exposed-modules:  Ide.Plugin.OverloadedRecordDot
     build-depends:
       , base                  >=4.16 && <5
+      , aeson
       , ghcide
       , hls-plugin-api
       , lsp
@@ -58,8 +59,12 @@ test-suite tests
     build-depends:
       , base
       , filepath
+      , ghcide
       , text
       , hls-overloaded-record-dot-plugin
+      , lens
       , lsp-test
+      , lsp-types
+      , row-types
       , hls-test-utils
 
