--- a/cabal.project
+++ b/cabal.project
@@ -42,6 +42,7 @@ packages:
 -- For example it is used in the project gitlab mirror to help in the MAcOS M1 build script
 -- See https://github.com/haskell/haskell-language-server/blob/master/.gitlab-ci.yml
 optional-packages: vendored/*/*.cabal
+optional-packages: ../ghc-debug/*/*.cabal
 
 tests: True
 
@@ -77,7 +78,7 @@ constraints:
   happy == 1.20.1.1,
   filepath installed,
   -- for ghc 8.10, stm-hamt 1.2.0.10 doesn't build
-  stm-hamt < 1.2.0.10
+  stm-hamt < 1.2.0.10,
 
 -- This is benign and won't affect our ability to release to Hackage,
 -- because we only depend on `ekg-json` when a non-default flag
