Fix test failures

--- a/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
+++ b/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
@@ -64,6 +64,7 @@ test-suite tests
     , filepath
     , ghcide                     == 2.1.0.0
     , hls-code-range-plugin
+    , hls-plugin-api
     , hls-test-utils             == 2.1.0.0
     , lens
     , lsp
