--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -207,7 +207,7 @@ common cabal
     cpp-options: -Dhls_cabal
 
 common class
-  if flag(class)
+  if flag(class) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-class-plugin == 2.3.0.0
     cpp-options: -Dhls_class
 
@@ -227,17 +227,17 @@ common importLens
     cpp-options: -Dhls_importLens
 
 common rename
-  if flag(rename)
+  if flag(rename) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-rename-plugin == 2.3.0.0
     cpp-options: -Dhls_rename
 
 common retrie
-  if flag(retrie)
+  if flag(retrie) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-retrie-plugin == 2.3.0.0
     cpp-options: -Dhls_retrie
 
 common hlint
-  if flag(hlint)
+  if flag(hlint) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-hlint-plugin == 2.3.0.0
     cpp-options: -Dhls_hlint
 
@@ -252,7 +252,7 @@ common pragmas
     cpp-options: -Dhls_pragmas
 
 common splice
-  if flag(splice)
+  if flag(splice) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-splice-plugin == 2.3.0.0
     cpp-options: -Dhls_splice
 
@@ -277,7 +277,7 @@ common changeTypeSignature
     cpp-options: -Dhls_changeTypeSignature
 
 common gadt
-  if flag(gadt)
+  if flag(gadt) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-gadt-plugin == 2.3.0.0
     cpp-options: -Dhls_gadt
 
@@ -304,7 +304,7 @@ common floskell
     cpp-options: -Dhls_floskell
 
 common fourmolu
-  if flag(fourmolu)
+  if flag(fourmolu) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-fourmolu-plugin == 2.3.0.0
     cpp-options: -Dhls_fourmolu
 
@@ -314,12 +314,12 @@ common ormolu
     cpp-options: -Dhls_ormolu
 
 common stylishHaskell
-  if flag(stylishHaskell)
+  if flag(stylishHaskell) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-stylish-haskell-plugin == 2.3.0.0
     cpp-options: -Dhls_stylishHaskell
 
 common refactor
-  if flag(refactor)
+  if flag(refactor) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-refactor-plugin == 2.3.0.0
     cpp-options: -Dhls_refactor
 
