--- a/hie-compat/hie-compat.cabal
+++ b/hie-compat/hie-compat.cabal
@@ -39,5 +39,5 @@ library
     hs-source-dirs: src-ghc90 src-reexport-ghc9
   if (impl(ghc >= 9.2) && impl(ghc < 9.3))
     hs-source-dirs: src-ghc92 src-reexport-ghc9
-  if (impl(ghc >= 9.4) && impl(ghc < 9.7))
+  if (impl(ghc >= 9.4))
     hs-source-dirs: src-reexport-ghc92
