--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -23,7 +23,11 @@ source-repository head
   location: git://github.com/haskell/haskell-language-server.git
 
 library
-  buildable: True
+  -- Plugins that need exactprint have not been updated for 9.8 yet
+  if impl(ghc >= 9.8)
+    buildable: False
+  else
+    buildable: True
   exposed-modules:
       Ide.Plugin.Fourmolu
   hs-source-dirs:   src
@@ -55,7 +59,10 @@ library
   default-language: Haskell2010
 
 test-suite tests
-  buildable: True
+  if impl(ghc >= 9.8)
+    buildable: False
+  else
+    buildable: True
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
