--- a/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
+++ b/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
@@ -23,6 +23,7 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
+  -- Plugins that need exactprint have not been updated for 9.8 yet
   if impl(ghc >= 9.7)
     buildable: False
   exposed-modules:  Ide.Plugin.Ormolu
