--- a/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
+++ b/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
@@ -22,6 +22,11 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
+  -- Plugins that need exactprint have not been updated for 9.8 yet
+  if impl(ghc >= 9.8)
+    buildable: False
+  else
+    buildable: True
   exposed-modules:  Development.IDE.GHC.ExactPrint
                     Development.IDE.GHC.Compat.ExactPrint
                     Development.IDE.Plugin.CodeAction
@@ -93,6 +98,10 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  if impl(ghc >= 9.8)
+    buildable: False
+  else
+    buildable: True
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
