--- a/plugins/hls-rename-plugin/hls-rename-plugin.cabal
+++ b/plugins/hls-rename-plugin/hls-rename-plugin.cabal
@@ -21,6 +21,11 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
+  -- Plugins that need exactprint have not been updated for 9.8 yet
+  if impl(ghc >= 9.8)
+    buildable: False
+  else
+    buildable: True
   exposed-modules:  Ide.Plugin.Rename
   hs-source-dirs:   src
   build-depends:
@@ -48,6 +53,10 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  if impl(ghc >= 9.8)
+    buildable: False
+  else
+    buildable: True
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
