--- a/plugins/hls-retrie-plugin/hls-retrie-plugin.cabal
+++ b/plugins/hls-retrie-plugin/hls-retrie-plugin.cabal
@@ -21,6 +21,11 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
+  -- Plugins that need exactprint have not been updated for 9.8 yet
+  if impl(ghc >= 9.8)
+    buildable: False
+  else
+    buildable: True
   exposed-modules:    Ide.Plugin.Retrie
   hs-source-dirs:     src
   build-depends:
@@ -55,7 +60,10 @@ library
   ghc-options:        -Wno-unticked-promoted-constructors
 
 test-suite tests
-  buildable: True
+  if impl(ghc >= 9.8)
+    buildable: False
+  else
+    buildable: True
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
