--- a/bench/config.yaml
+++ b/bench/config.yaml
@@ -135,7 +135,7 @@ configurations:
   - ghcide-completions
   - ghcide-type-lenses
   - hlint
-  - importLens
+  - importActions
   - moduleName
   - ormolu
   - pragmas
@@ -162,7 +162,7 @@ configurations:
 # - ghcide-type-lenses
 # - haddockComments
 # - hlint
-# - importLens
+# - importActions
 # - moduleName
 # # - ormolu
 # - pragmas
