--- a/plugins/hls-retrie-plugin/hls-retrie-plugin.cabal
+++ b/plugins/hls-retrie-plugin/hls-retrie-plugin.cabal
@@ -35,6 +35,7 @@ library
     , lens
     , lsp
     , lsp-types
+    , mtl
     , retrie                >=0.1.1.0
     , safe-exceptions
     , stm
