--- a/plugins/hls-explicit-imports-plugin/hls-explicit-imports-plugin.cabal
+++ b/plugins/hls-explicit-imports-plugin/hls-explicit-imports-plugin.cabal
@@ -43,6 +43,7 @@ library
     , hls-plugin-api        == 2.1.0.0
     , lens
     , lsp
+    , mtl
     , text
     , transformers
     , unordered-containers
