--- a/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
+++ b/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
@@ -31,6 +31,7 @@ library
     , ghcide          == 2.1.0.0
     , hls-plugin-api  == 2.1.0.0
     , lsp-types       ^>=2.0.0.1
+    , mtl
     , text
     , transformers
 
