--- a/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
+++ b/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
@@ -22,15 +22,19 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
-  if impl(ghc >= 9.2)
+  if impl(ghc >= 9.6)
+    hs-source-dirs:     src-96
+    build-depends: ghc-exactprint ^>= 1.7.0.1
+  elif impl (ghc >= 9.2)
     buildable: False
   else
-    buildable: True
+    hs-source-dirs:     src
+    other-modules:
+      Ide.Plugin.HaddockComments.Data
+      Ide.Plugin.HaddockComments.Prelude
+    build-depends: ghc-exactprint < 1
   exposed-modules:
     Ide.Plugin.HaddockComments
-    Ide.Plugin.HaddockComments.Data
-    Ide.Plugin.HaddockComments.Prelude
-  hs-source-dirs:     src
   ghc-options:
     -Wall -Wno-name-shadowing -Wredundant-constraints
     -Wno-unticked-promoted-constructors
@@ -39,7 +43,6 @@ library
     , base                  >=4.12 && <5
     , containers
     , ghc
-    , ghc-exactprint        < 1
     , ghcide                == 2.1.0.0
     , hls-plugin-api        == 2.1.0.0
     , hls-refactor-plugin
