--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -568,6 +568,7 @@ test-suite func-test
     , containers
     , unordered-containers
     , row-types
+    , process
 
   hs-source-dirs:     test/functional test/utils
 
