Add resolve support in refine imports by merging it with explicit imports (#3729)

--- a/plugins/hls-explicit-imports-plugin/test/testdata/hie.yaml
+++ b/plugins/hls-explicit-imports-plugin/test/testdata/hie.yaml
@@ -2,9 +2,18 @@
 cradle:
   direct:
     arguments:
-    - OnlyThis.hs
-    - StaleAction.hs
-    - UsualCase.hs
-    - Exported.hs
-    - A.hs
-    - B.hs
+    - ExplicitOnlyThis.hs
+    - ExplicitStaleAction.hs
+    - ExplicitUsualCase.hs
+    - ExplicitExported.hs
+    - ExplicitA.hs
+    - ExplicitB.hs
+    - RefineUsualCase.hs
+    - RefineWithOverride.hs
+    - RefineA.hs
+    - RefineB.hs
+    - RefineC.hs
+    - RefineD.hs
+    - RefineE.hs
+    - RefineF.hs
+    - RefineG.hs
