--- a/.github/workflows/hackage.yml
+++ b/.github/workflows/hackage.yml
@@ -34,7 +34,7 @@ jobs:
                   "hls-class-plugin", "hls-eval-plugin", "hls-explicit-imports-plugin",
                   "hls-haddock-comments-plugin", "hls-hlint-plugin", "hls-stan-plugin",
                   "hls-module-name-plugin", "hls-pragmas-plugin",
-                  "hls-refine-imports-plugin", "hls-rename-plugin", "hls-retrie-plugin",
+                  "hls-rename-plugin", "hls-retrie-plugin",
                   "hls-splice-plugin", "hls-tactics-plugin",
                   "hls-call-hierarchy-plugin", "hls-alternate-number-format-plugin",
                   "hls-qualify-imported-names-plugin", "hls-code-range-plugin",
